# HandsOnMLE

./: .gitignore  Dockerfile  Housing_Model_Deployment.ipynb  Housing_Price_Prediction.ipynb  LICENSE  MLproject  README.md  conda.yaml  env.yml  nonstandardcode.py  pyproject.toml  requirements.txt  settings.json  setup.cfg  setup.py
artifacts/: DecisionTreeRegressor.pkl  LinearRegression.pkl
docs/source/: .conf.py.swp  conf.py  test_score.rst
mlruns/0/338393e3012a461bb6ef85c4e48c3826/: meta.yaml
mlruns/0/34d39362b5ad432683f9d8d2eba5e529/: meta.yaml
mlruns/0/780f52fe48224230a520b595e7f96467/: meta.yaml
mlruns/0/806a18a1007a4c608e24aca648d8848d/: meta.yaml
mlruns/0/a5c4201ca1324fdc86f4c3dead370516/: meta.yaml
mlruns/0/a5c4201ca1324fdc86f4c3dead370516/metrics/: rmse
mlruns/0/a5c4201ca1324fdc86f4c3dead370516/tags/: mlflow.log-model.history
mlruns/0/b9e6b0f870734e4fbb92232e8a5f42d5/: meta.yaml
mlruns/0/baa596c2cd404d26b1a797915fefecde/: meta.yaml
mlruns/0/baa596c2cd404d26b1a797915fefecde/metrics/: mae  rmse
mlruns/0/dafc10363f0b4643ae047b1942135720/: meta.yaml
mlruns/0/e09e470e566748a89521f2ddce7ada63/: meta.yaml
mlruns/0/e994bd2cf08b4518acf7a88ff5b8e1ac/: meta.yaml
notebooks/: Housing_Price_Prediction.ipynb
notebooks/Tracking/: Housing_Model_Deployment.ipynb  train.py
src/Housing_Price_Prediction/: ingest_data.py  logger.py  score.py  train.py
src/Housing_Price_Prediction.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/functional_tests/: test_functional.py
tests/unit_tests/: test_ingest_data.py  test_score.py  test_train.py
(+21 files in other folders)
